Delete body width 100vw to fix right images not showing completely

--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@ body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     display: flex;
     flex-direction: column;
-    width: 100vw;
     overflow-x: hidden;
 }
 
@@ -41,41 +40,6 @@ header {
     aspect-ratio: 3/4;
 }
 
-@keyframes slideInRight {
-    from {
-        opacity: 0;
-        transform: translateX(140px);
-    }
-    to {
-        opacity: 1;
-        transform: translateX(0);
-    }
-}
-
-.hero-1 {
-    animation-name: slideInRight;
-    animation-duration: 1.6s;
-    animation-timing-function: ease-in-out;
-    animation-delay: 0s;
-    animation-iteration-count: 1;
-}
-
-.hero-2 {
-    animation-name: slideInRight;
-    animation-duration: 2s;
-    animation-timing-function: ease-in-out;
-    animation-delay: 0s;
-    animation-iteration-count: 1;
-}
-
-.hero-3 {
-    animation-name: slideInRight;
-    animation-duration: 2.4s;
-    animation-timing-function: ease-in-out;
-    animation-delay: 0s;
-    animation-iteration-count: 1;
-}
-
 .hero-text {
     flex: 5 4 auto;
     margin: 30px 0px 0px 60px;
@@ -91,14 +55,6 @@ nav {
     flex-direction: row;
     justify-content: space-around;
     margin-top: 180px;
-}
-
-.landing-image {
-    border-radius: 10px;
-    aspect-ratio: 4/3;
-    box-shadow: 8px 8px 10px rgba(107, 107, 107, 0.436); 
-    transition: ease-in-out 0.5s;
-    will-change: contents;
 }
 
 .landing-image:hover {
@@ -268,4 +224,47 @@ footer {
 .block-1-content img,
 .block-2-content img {
     box-shadow: 8px 8px 10px rgba(107, 107, 107, 0.436);
+}
+
+.hero-1 {
+    animation-name: slideInRight;
+    animation-duration: 1.6s;
+    animation-timing-function: ease-in-out;
+    animation-delay: 0s;
+    animation-iteration-count: 1;
+}
+
+.hero-2 {
+    animation-name: slideInRight;
+    animation-duration: 2s;
+    animation-timing-function: ease-in-out;
+    animation-delay: 0s;
+    animation-iteration-count: 1;
+}
+
+.hero-3 {
+    animation-name: slideInRight;
+    animation-duration: 2.4s;
+    animation-timing-function: ease-in-out;
+    animation-delay: 0s;
+    animation-iteration-count: 1;
+}
+
+@keyframes slideInRight {
+    from {
+        opacity: 0;
+        transform: translateX(140px);
+    }
+    to {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+.landing-image {
+    border-radius: 10px;
+    aspect-ratio: 4/3;
+    box-shadow: 8px 8px 10px rgba(107, 107, 107, 0.436); 
+    transition: ease-in-out 0.5s;
+    will-change: contents;
 }
